<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">傻瓜停车</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">设置</string>
    <string name="title_activity_register">注册</string>
    <string name="title_activity_login">登录</string>
    <string name="title_activity_park_map">ParkMapActivity</string>
    <string name="title_activity_park_detail">停车场详情</string>
    <string name="title_activity_comment_whole">全部评论</string>
    <string name="title_activity_share_friends">推荐好友</string>
    <string name="title_activity_share_friends_text1">推荐好友，领停车券</string>
    <string name="title_activity_share_friends_text2">分享给好友邀请码\n他首次注册并停车一次，您也可以获得优惠奖励</string>
    <string name="title_activity_park_list">停车场</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!-- <string name="title_activity_navigation">NavigationActivity</string> -->
    <string name="title_activity_index">IndexActivity</string>
    <string name="title_activity_indoor">IndoorActivity</string>
    <string name="title_activity_setting">设置</string>
    <string name="title_activity_feedback">意见反馈</string>
    <string name="feedback_park_question">停车场的相关问题</string>
    <string name="feedback_app_question">APP的相关问题</string>
    <string name="feedback_advice">请您在这里填写您对傻瓜停车的意见和建议,我们将不断努力改进,感谢您的支持。</string>
    <string name="feedback_contact_way">留下电话/QQ/邮箱 (可选) 以便我们与您联系</string>
    <string name="feedback_receive_callback">是否愿意接受回访</string>
    <string name="title_activity_car_manage">车辆管理</string>
    <string name="title_activity_add_car">添加车辆</string>
    <string name="title_activity_base">BaseActivity</string>
    <string name="title_activity_reset_password">重置密码</string>
    <string name="title_activity_reset_password_activity2">重置密码</string>
    <string name="title_activity_user_center">账号管理</string>
    <string name="title_activity_voucher">停车券</string>
    <string name="title_activity_change_mobile">更换手机号</string>
    <string name="title_activity_change_mobile_activity2">更换手机号</string>
    <string name="title_activity_account_relating">AccountRelatingActivity</string>
    <string name="title_activity_activity_center">活动中心</string>
    <string name="title_activity_car_regain">车牌找回</string>
    <string name="regain_declare">请上传相关照片,进行车辆信息验证</string>
    <string name="regain_declare1">1.车辆照片,行驶证仅供审阅使用,不公开给任何组织和个人</string>
    <string name="regain_declare2">2.审核中不可修改</string>
    <string name="regain_declare3">3.人工审核约1个工作日左右</string>
    <string name="regain_declare4">4.如有需要请致电客服: 400 900 1810</string>
    <string name="title_activity_point_detail">积分明细</string>
    <string name="title_activity_message">MessageActivity</string>
    <string name="title_activity_book_or_collect">BookOrCollectActivity</string>
    <string name="title_activity_voucher_exchange">兑换停车券</string>
    <string name="voucher_exchange_desc">注: 兑换停车券为10元停车券,每张停车券所需积分1000</string>
    <string name="title_activity_recharge">余额充值</string>
    <string name="title_activity_refund">个人提现</string>
    <string name="title_activity_recharge_detail">充值明细</string>
    <string name="title_activity_refund_detail">提现明细</string>
    <string name="title_activity_wxpay_entry">WXPayEntryActivity</string>
    <string name="title_activity_scanpay">支付</string>
    <string name="title_activity_splash">SplashActivity</string>
    <string name="title_activity_app_view_pager">AppViewPagerActivity</string>
    <string name="title_activity_about">关于傻瓜停车</string>
    <string name="title_activity_wechat">微信公众号</string>
    <string name="about_title">赋尔网络科技(上海)有限公司</string>
    <string name="about_contact">联系方式info@fooltech.com.cn</string>
    <string name="about_tel">400-900-1810</string>
    <string name="about_web">www.fooltech.com.cn</string>
    <string name="title_activity_bill_detail">账单详情</string>
    <string name="title_activity_position_record">车位记录</string>
    <string name="title_activity_car_search">寻找爱车</string>
    <string name="title_activity_card_buy">购买月卡</string>
    <string name="title_activity_my_card">我的月卡</string>
    <string name="title_activity_my_card_text">购买月卡出入停车场\n&#160;&#160;&#160;&#160;更加自由，方便出行。</string>
    <string name="title_activity_card_buy_text">可购买月卡的停车场名称</string>
    <string name="title_activity_card_buy_text1">选择本次购买的卡券</string>
    <string name="title_activity_card_buy_text2">包月 (工作时间) 套餐</string>
    <string name="title_activity_card_buy_text3">服务时间: (法定工作日)</string>
    <string name="title_activity_card_buy_text4">超时(服务时间段以外)  按临时计费</string>
    <string name="title_activity_card_buy_text5">注: 如超时停车,请自行与停车场沟通</string>
    <string name="title_activity_card_buy_text6">购买后1个工作日会有客服主动与您联系，核对信息以及相关事宜。</string>
    <string name="title_activity_card_buy_text7">如出现车位已满等异常情况，我们将主动联系您，并将包月预约费用在一周内原路退还。</string>
    <string name="title_activity_card_buy_text8">包月套餐经客服确认后不支持取消包月预约服务，如需发票可致电客服。</string>
    <string name="title_activity_card_buy_text9">停车期间，请遵守 《上海市公共停车场(库)停车规则》 及停车场管理制度，按停车场管理人员要求停放车辆。</string>
    <string name="dialog_book_text1">1.车位为您保留一小时</string>
    <string name="dialog_book_text2">2.预约成功后即开始计费</string>
    <string name="dialog_book_text3">3.1小时后仍未入场将取消预约并收取相关费用</string>
    <string name="dialog_book_text4">不了谢谢</string>
    <string name="dialog_book_text5">马上预约</string>
    <string name="dialog_car_bind_text1">此车牌已被他人绑定,是否继续?</string>
    <string name="dialog_car_bind_text2">我已知晓,继续申请</string>
    <string name="dialog_car_bind_text3">我是车主,申请找回</string>
    <string name="dialog_register_text1">恭喜您获得\n傻瓜停车停车券一张</string>
    <string name="dialog_register_text3">1.优惠券需要绑定车牌才能使用</string>
    <string name="dialog_register_text4">2.您可以点击头像去账户管理查看使用</string>
    <string name="dialog_register_text5">知道了,  现在去绑定车牌</string>
    <string name="dialog_logout">您确定要注销登录吗?</string>
    <string name="dialog_refund">您确定要提现吗?</string>
    <string name="dialog_cancle_book">您确定要取消预约吗?</string>
    <string name="dialog_camera">相机启动失败,请检查是否对傻瓜停车设置了拍照和录像权限,可在权限管理中重新授权。</string>
    <string name="dialog_voice">录音启动失败,请检查是否对傻瓜停车设置了通话及本地录音权限,可在权限管理中重新授权。</string>
    <string name="dialog_location">定位失败,请检查是否对傻瓜停车设置了定位权限,可在权限管理中重新授权。</string>
    <string name="dialog_phone">打电话失败,请检查是否对傻瓜停车设置了打电话权限,可在权限管理中重新授权。</string>
    <string name="dialog_space_select_text1">请选择你当前的停车位</string>
    <string name="dialog_space_select_text2">手动输入停车位</string>
    <string name="dialog_space_select_text3">手动输入能够帮您更精确找到您的车位</string>
    <string name="dialog_prompt_text1">您已超出该停车场规定时间,扣除1000积分。</string>
    <string name="dialog_prompt_text2">低于-2000积分时禁用此账号并扣除当前余额。</string>
    <string name="register_copyright">版权声明和隐私保护条款</string>
    <string name="title_activity_dialog_space">DialogSpaceActivity</string>
    <string name="title_activity_position_add">PositionAddActivity</string>
    <string name="title_activity_offline_map">OfflineMapActivity</string>
    <string name="offline_map_text1">您还未下载城市离线地图!</string>
    <string name="offline_map_text2">点击右侧 "全部城市" 进行下载</string>
    <string name="offline_map_text3">下载离线地图可以</string>
    <string name="offline_map_text4">节省90%流量</string>
    <string name="offline_map_text5">提升停车场查询速度</string>
    <string name="title_activity_activity_detail">ActivityDetailActivity</string>

    <string name="listview_plus_header_hint_normal">下拉刷新</string>
    <string name="listview_plus_header_hint_ready">松开刷新数据</string>
    <string name="listview_plus_header_hint_loading">正在加载...</string>
    <string name="listview_plus_header_last_time">上次更新时间：</string>
    <string name="listview_plus_footer_hint_normal">查看更多</string>
    <string name="listview_plus_footer_hint_ready">松开载入更多</string>
    <string name="switch_energy">切换新能源车牌</string>
    <string name="switch_general">切换普通车牌</string>
    <string name="net_socket_time">网络请求超时</string>

</resources>
