<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@color/white"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <!--<RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">-->
        <ImageView
            android:id="@+id/imageview1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/image"/>
        <TextView
            android:id="@+id/textview4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/imageview1"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:textColor="#000000"
            android:textSize="22sp"
            android:text="预约提示"/>
        <TextView
            android:id="@+id/textview5"
            android:layout_below="@id/textview4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="40dp"
            android:paddingTop="2dp"
            android:paddingBottom="3dp"
            android:layout_centerHorizontal="true"
            android:textSize="14sp"
            android:text="@string/dialog_book_text1"/>
        <TextView
            android:id="@+id/textview6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/textview5"
            android:paddingLeft="40dp"
            android:paddingTop="2dp"
            android:paddingBottom="3dp"
            android:textSize="14sp"
            android:text="@string/dialog_book_text2"/>
        <TextView
            android:id="@+id/textview7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/textview6"
            android:paddingLeft="40dp"
            android:paddingTop="2dp"
            android:paddingBottom="3dp"
            android:textSize="14sp"
            android:text="@string/dialog_book_text3"/>
        <View
            android:id="@+id/view6"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="@dimen/line_height"
            android:layout_below="@id/textview7"
            android:background="@color/divider"/>
        <LinearLayout
            android:layout_below="@id/view6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/dialog_cancle"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:background="@drawable/selector_item"
                android:paddingTop="15dp"
                android:paddingBottom="15dp"
                android:gravity="center"
                android:textSize="18sp"
                android:text="@string/dialog_book_text4"/>
            <View
                android:layout_width="@dimen/line_height"
                android:layout_height="55dp"
                android:background="@color/divider"/>
            <TextView
                android:id="@+id/dialog_book"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:background="@drawable/selector_item"
                android:paddingTop="15dp"
                android:paddingBottom="15dp"
                android:gravity="center"
                android:textSize="18sp"
                android:textColor="@color/green"
                android:text="@string/dialog_book_text5"/>
        </LinearLayout>
   <!-- </RelativeLayout>-->
</RelativeLayout>
