<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context="cn.com.fooltech.smartparking.fragment.DownLoadManageFragment">

    <RelativeLayout
        android:id="@+id/empty_offline"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <RelativeLayout
            android:id="@+id/lay_down"
            android:background="@color/white"
            android:paddingTop="30dp"
            android:paddingBottom="30dp"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/offline_text1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textSize="22sp"
                android:textColor="@color/text"
                android:text="@string/offline_map_text1"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/offline_text1"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:textSize="16sp"
                android:text="@string/offline_map_text2"/>
        </RelativeLayout>

        <LinearLayout
            android:id="@+id/lay_offline2"
            android:layout_below="@id/lay_down"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:gravity="center"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <View
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:background="@color/keyboard_bg"/>
            <TextView
                android:layout_weight="1.6"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textSize="18sp"
                android:textColor="@color/text"
                android:text="@string/offline_map_text3"/>
            <View
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:background="@color/keyboard_bg"/>
        </LinearLayout>
        <TextView
            android:layout_below="@id/lay_offline2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="15dp"
            android:gravity="center"
            android:drawableLeft="@drawable/oval_gray"
            android:drawablePadding="5dp"
            android:text="@string/offline_map_text4"/>
        <TextView
            android:layout_below="@id/lay_offline2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginRight="15dp"
            android:layout_alignParentRight="true"
            android:gravity="center"
            android:drawableLeft="@drawable/oval_gray"
            android:drawablePadding="5dp"
            android:text="@string/offline_map_text5"/>
    </RelativeLayout>

    <ListView
        android:id="@+id/lv_download"
        android:divider="@color/divider"
        android:dividerHeight="@dimen/line_height"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="visible" />
</FrameLayout>
