<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:paddingBottom="100dp"
    android:orientation="vertical"
    tools:context="cn.com.fooltech.smartparking.activity.FeedbackActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/activity_title_height"
        android:background="@color/white">
        <ImageView
            android:id="@+id/back_feedback"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onClick"
            android:layout_centerVertical="true"
            android:padding="10dp"
            android:background="@drawable/selector_item"
            android:src="@drawable/back"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:textSize="@dimen/activity_title"
            android:textColor="@color/green"
            android:text="@string/title_activity_feedback"/>
        <TextView
            android:id="@+id/send_advice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onClick"
            android:clickable="true"
            android:padding="15dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:background="@drawable/selector_item"
            android:textSize="16sp"
            android:textColor="@color/green"
            android:text="发送"/>
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/park_question"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:onClick="onClick"
        android:background="@drawable/bg_white"
        android:layout_weight="0.6"
        android:layout_width="match_parent"
        android:layout_height="0dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:paddingLeft="15dp"
            android:textSize="16sp"
            android:textColor="#999999"
            android:text="@string/feedback_park_question"/>
        <ImageView
            android:id="@+id/image_park"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:layout_marginRight="15dp"
            android:background="@drawable/checked"/>
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/app_question"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_weight="0.6"
        android:layout_marginTop="2dp"
        android:onClick="onClick"
        android:background="@drawable/bg_white"
        android:layout_width="match_parent"
        android:layout_height="0dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:paddingLeft="15dp"
            android:textSize="16sp"
            android:textColor="#999999"
            android:text="@string/feedback_app_question"/>
        <ImageView
            android:id="@+id/image_app"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:visibility="gone"
            android:layout_marginRight="15dp"
            android:background="@drawable/checked"/>
    </RelativeLayout>
    <RelativeLayout
        android:layout_weight="2.5"
        android:layout_width="match_parent"
        android:layout_height="0dp">
        <EditText
            android:id="@+id/feedback_advice"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/bg_white"
            android:gravity="top"
            android:lines="9"
            android:maxLength="2000"
            android:layout_marginTop="15dp"
            android:paddingLeft="15dp"
            android:paddingTop="10dp"
            android:textSize="16sp"
            android:textColorHint="@color/text_hint"
            android:hint="@string/feedback_advice"/>
        <TextView
            android:id="@+id/tv_text_count"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:layout_marginRight="15dp"
            android:layout_marginBottom="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#8c8c8c"
            android:textSize="12sp"
            android:text="0/2000"/>
    </RelativeLayout>
    <EditText
        android:id="@+id/contact_way"
        android:layout_weight="0.7"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@drawable/bg_white"
        android:gravity="center_vertical"
        android:layout_marginTop="15dp"
        android:paddingLeft="15dp"
        android:singleLine="true"
        android:textSize="16sp"
        android:textColorHint="@color/text_hint"
        android:hint="@string/feedback_contact_way"/>
    <RelativeLayout
        android:layout_weight="0.6"
        android:layout_width="wrap_content"
        android:layout_height="0dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="110dp"
            android:textSize="16sp"
            android:text="@string/feedback_receive_callback"/>
        <cn.com.fooltech.smartparking.view.ToggleButton
            android:id="@+id/toggleButton_visit"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="30dp"
            android:layout_width="60dp"
            android:layout_height="30dp"/>
    </RelativeLayout>

</LinearLayout>
