<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <RelativeLayout
        android:background="@color/white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:id="@+id/imageview1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/dialog_car_bind"/>
        <TextView
            android:id="@+id/textview4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/imageview1"
            android:layout_centerHorizontal="true"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:gravity="center"
            android:textColor="#000000"
            android:textSize="18sp"
            android:text="@string/dialog_car_bind_text1"/>
        <View
            android:id="@+id/view4"
            android:layout_width="match_parent"
            android:layout_height="@dimen/line_height"
            android:layout_below="@id/textview4"
            android:background="@color/divider"/>
        <TextView
            android:id="@+id/continue_apply"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/view4"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:gravity="center"
            android:background="@drawable/selector_item"
            android:layout_centerHorizontal="true"
            android:textSize="16sp"
            android:textColor="#454545"
            android:text="@string/dialog_car_bind_text2"/>
        <View
            android:id="@+id/view5"
            android:layout_width="match_parent"
            android:layout_height="@dimen/line_height"
            android:layout_below="@id/continue_apply"
            android:background="@color/divider"/>
        <TextView
            android:id="@+id/apply_regain"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/view5"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:gravity="center"
            android:layout_centerHorizontal="true"
            android:background="@drawable/selector_item"
            android:textSize="16sp"
            android:textColor="#454545"
            android:text="@string/dialog_car_bind_text3"/>
    </RelativeLayout>
    <ImageView
        android:id="@+id/close_x2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:background="@drawable/close_white"/>
</RelativeLayout>
