<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:id="@+id/lay_car_regain"
    tools:context="cn.com.fooltech.smartparking.activity.CarRegainActivity">

    <RelativeLayout
        android:id="@+id/lay_regain"
        android:layout_width="match_parent"
        android:layout_height="@dimen/activity_title_height"
        android:background="@color/white">
        <ImageView
            android:id="@+id/back_car_regain"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onClick"
            android:layout_centerVertical="true"
            android:padding="10dp"
            android:background="@drawable/selector_item"
            android:src="@drawable/back"/>
        <TextView
            android:id="@+id/plate_num"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:textSize="@dimen/activity_title"
            android:textColor="@color/green"
            android:text="@string/title_activity_car_regain"/>
    </RelativeLayout>
    <ScrollView
        android:layout_below="@id/lay_regain"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:id="@+id/declare"
                android:layout_marginTop="15dp"
                android:layout_marginLeft="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/red"
                android:textSize="18sp"
                android:text="@string/regain_declare"/>
            <TextView
                android:id="@+id/plate_num_show3"
                android:layout_below="@id/declare"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="15dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:textColor="@color/text"
                android:text=""/>
            <RelativeLayout
                android:id="@+id/lay_pic"
                android:layout_below="@id/plate_num_show3"
                android:gravity="center"
                android:layout_marginTop="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <LinearLayout
                    android:id="@+id/lay_lic"
                    android:orientation="vertical"
                    android:gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                    <ImageView
                        android:id="@+id/iv_lic"
                        android:layout_width="130dp"
                        android:layout_height="130dp"
                        android:scaleType="centerCrop"
                        android:onClick="onClick"
                        android:background="@drawable/image_add"/>
                    <TextView
                        android:id="@+id/tv_lic"
                        android:layout_marginTop="5dp"
                        android:layout_below="@id/iv_lic"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="18sp"
                        android:textColor="@color/text"
                        android:text="行驶证"/>
                </LinearLayout>
                <LinearLayout
                    android:orientation="vertical"
                    android:gravity="center"
                    android:layout_marginLeft="20dp"
                    android:layout_toRightOf="@id/lay_lic"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                    <ImageView
                        android:id="@+id/iv_car"
                        android:layout_width="130dp"
                        android:layout_height="130dp"
                        android:scaleType="centerCrop"
                        android:onClick="onClick"
                        android:background="@drawable/image_add"/>
                    <TextView
                        android:layout_below="@id/iv_car"
                        android:layout_marginTop="5dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="18sp"
                        android:textColor="@color/text"
                        android:text="车辆照片"/>
                    </LinearLayout>
            </RelativeLayout>
            <TextView
                android:id="@+id/declare1"
                android:layout_below="@id/lay_pic"
                android:layout_marginTop="20dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:textSize="16sp"
                android:text="@string/regain_declare1"/>
            <TextView
                android:id="@+id/declare2"
                android:layout_below="@id/declare1"
                android:layout_marginTop="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:textSize="16sp"
                android:text="@string/regain_declare2"/>
            <TextView
                android:id="@+id/declare3"
                android:layout_below="@id/declare2"
                android:layout_marginTop="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:textSize="16sp"
                android:text="@string/regain_declare3"/>
            <TextView
                android:id="@+id/declare4"
                android:layout_below="@id/declare3"
                android:layout_marginTop="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:textSize="16sp"
                android:text="@string/regain_declare4"/>
            <Button
                android:id="@+id/submit_approve"
                android:layout_below="@id/declare4"
                android:layout_centerHorizontal="true"
                android:layout_width="@dimen/btn_long_width"
                android:layout_height="@dimen/btn_long_heigh"
                android:layout_marginTop="20dp"
                android:textSize="@dimen/btn_text"
                android:onClick="onClick"
                android:textColor="@color/text_button2"
                style="?android:attr/borderlessButtonStyle"
                android:background="@drawable/selector_btn_click"
                android:text="提交认证"/>
        </RelativeLayout>
    </ScrollView>
</RelativeLayout>
